fix style bugs in addPhoto forms and success message on dark mode

--- a/styles.scss/_home.scss
+++ b/styles.scss/_home.scss
@@ -57,6 +57,10 @@
                 }
             }
 
+            @media (prefers-color-scheme: dark) {
+                background-color: rgb(30, 30, 30);
+            }
+
         }
 
         @media (min-width: $large) {
